[gd_scene load_steps=84 format=2]

[ext_resource path="res://Assets/Scripts/Player/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Character/puddle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Character/slime_walking_animation-Sheet-fix.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Character/fall_mid_air-Sheet-fix.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scenes/Player/MeleeAttack.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/Character/vertical_jump-Sheet-fix.png" type="Texture" id=6]
[ext_resource path="res://UI/Radialbar/RadialBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Scripts/Player/states/plr_slide.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/Character/puddle_transition_sheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Character/slime_idle_animation1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Scenes/Player/ProjectilePlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Scripts/Player/player_states.gd" type="Script" id=12]
[ext_resource path="res://Assets/Scripts/Player/states/plr_fall.gd" type="Script" id=13]
[ext_resource path="res://Assets/Scripts/Player/states/plr_idle.gd" type="Script" id=14]
[ext_resource path="res://Assets/Scripts/Player/states/plr_jump.gd" type="Script" id=15]
[ext_resource path="res://Assets/Scripts/Player/states/plr_move.gd" type="Script" id=16]
[ext_resource path="res://Assets/Scenes/UI/cranBerryCounter.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Scenes/UI/healthBar.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Sprites/SLASH.png" type="Texture" id=19]
[ext_resource path="res://Assets/Scripts/Player/camera/cameraZoomZones.gd" type="Script" id=20]
[ext_resource path="res://Assets/Scripts/experimentals.gd" type="Script" id=21]
[ext_resource path="res://Assets/Scenes/UI/CageCount.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/Scripts/shaker.gd" type="Script" id=23]
[ext_resource path="res://Assets/Scripts/Player/audioplayer/AudioPlayer.gd" type="Script" id=26]
[ext_resource path="res://Assets/MusicAndSounds/Player/NewWalkingSound.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/MusicAndSounds/Player/Spit.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/MusicAndSounds/Player/Pain.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/MusicAndSounds/Player/NewJump02.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/MusicAndSounds/Player/NewLandingOtherSound.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/MusicAndSounds/Player/EatingCranberries.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/MusicAndSounds/Player/swing.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/MusicAndSounds/Player/hit.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/Sprites/Vignette.png" type="Texture" id=35]

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 6 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "fallAnim",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "idleAnim",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "jumpAnim",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "moveAnim",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "puddleAnim",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "puddleAnimTransition",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=84]
radius = 11.6726

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "newIdle" ]
}

[sub_resource type="Animation" id=77]
resource_name = "fall"
length = 0.1
loop = true
step = 0.006
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fallAnim" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.078 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 5.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idleAnim" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.6, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=76]
resource_name = "jump"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.16, 0.26, 0.32, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "jumpAnim" ]
}

[sub_resource type="Animation" id=58]
resource_name = "move"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "moveAnim" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=88]
resource_name = "puddle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "puddleAnim" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=83]
resource_name = "puddleTransition"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "puddleAnimTransition" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=89]
resource_name = "Color"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.305882, 0.305882, 1 ) ]
}

[sub_resource type="Animation" id=90]
resource_name = "Opacity"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2.46229 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=91]

[node name="player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 89
script = ExtResource( 1 )
spitProjectileTemplate = ExtResource( 11 )
maxSpeed = 285
acceleration = 18000
accelerationAir = 1750
frictionFloor = 18000
gravity = 2500
jumpForce = 795
doubleJumpDamping = 100

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 0, 8 )
scale = Vector2( 1, 1.00853 )
frames = SubResource( 6 )
animation = "moveAnim"
offset = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.68 )
rotation = 1.5708
shape = SubResource( 84 )

[node name="SpitCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/fall = SubResource( 77 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 76 )
anims/move = SubResource( 58 )
anims/puddle = SubResource( 88 )
anims/puddleTransition = SubResource( 83 )

[node name="player_states" type="Node" parent="."]
script = ExtResource( 12 )

[node name="idle" type="Node" parent="player_states"]
script = ExtResource( 14 )
animation_name = "idle"

[node name="move" type="Node" parent="player_states"]
script = ExtResource( 16 )
animation_name = "move"

[node name="fall" type="Node" parent="player_states"]
script = ExtResource( 13 )
animation_name = "fall"

[node name="jump" type="Node" parent="player_states"]
script = ExtResource( 15 )
animation_name = "jump"

[node name="slide" type="Node" parent="player_states"]
script = ExtResource( 8 )
intro_animation_name = "puddleTransition"
animation_name = "puddle"
collisionRadius = 4.7
collisionOffset = Vector2( 0, 5.295 )

[node name="PuddleCooldown" type="Timer" parent="player_states/slide"]
wait_time = 3.0
one_shot = true

[node name="RadialBar" parent="." instance=ExtResource( 7 )]
ProgressTime = 0.0
RecoveryTime = 1.5
AnimatedSpritePath = NodePath("AnimatedSprite")

[node name="AnimatedSprite" parent="RadialBar" index="0"]
modulate = Color( 1, 0.537255, 0.537255, 1 )
followingNode = NodePath("../..")
nodeThatFollows = NodePath("..")
followingOffset = Vector2( 25, -25 )

[node name="AnimationPlayer" parent="RadialBar/AnimatedSprite" index="0"]
anims/Color = SubResource( 89 )
anims/Opacity = SubResource( 90 )

[node name="MeleeAttack" parent="." instance=ExtResource( 5 )]
visible = false
z_index = -1

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 0, -32 )

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 14, -29 )

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( -14, -28 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -50 )
current = true
script = ExtResource( 20 )
Camera = NodePath(".")
Area2D = NodePath("../Zones")
Experimentals = NodePath("../Libraries/experimentals")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 0
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="Effects" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HUD/Effects"]
modulate = Color( 1, 1, 1, 0.701961 )
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 35 )
expand = true

[node name="healthBar" parent="HUD" instance=ExtResource( 18 )]
margin_left = 13.5
margin_top = 23.0
margin_right = 65.5
margin_bottom = 75.0

[node name="cranberryHUD" parent="HUD" instance=ExtResource( 17 )]
margin_left = 51.0
margin_top = 9.0
margin_right = 105.0
margin_bottom = 63.0
rect_scale = Vector2( 0.282607, 0.282607 )

[node name="cageHUD" parent="HUD" instance=ExtResource( 22 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 67.0
margin_top = 20.5
margin_right = 85.0
margin_bottom = 38.5
rect_scale = Vector2( 0.917084, 0.917084 )

[node name="Slash" type="TextureRect" parent="HUD"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 58.5
margin_top = 15.5
margin_right = 76.5
margin_bottom = 33.5
texture = ExtResource( 19 )
expand = true

[node name="Libraries" type="Node2D" parent="."]

[node name="shaker" type="Node2D" parent="Libraries"]
script = ExtResource( 23 )

[node name="experimentals" type="Node2D" parent="Libraries"]
script = ExtResource( 21 )
cameraZoomZones = true

[node name="AudioPlayer" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 26 )

[node name="Walk" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 27 )
volume_db = -25.0
bus = "SFX"

[node name="Spit" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 28 )
volume_db = -25.0
bus = "SFX"

[node name="Jump" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 30 )
volume_db = -25.0
bus = "SFX"

[node name="Landing" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 31 )
volume_db = -25.0
pitch_scale = 0.95
bus = "SFX"

[node name="Pain" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 29 )
volume_db = -25.0
bus = "SFX"

[node name="CranberryEat" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 32 )
volume_db = -5.0
bus = "SFX"

[node name="Swing" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 33 )
volume_db = -17.0
bus = "SFX"

[node name="SwingHit" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 34 )
volume_db = -15.0
bus = "ReverbSFX"

[node name="Zones" type="Area2D" parent="."]
scale = Vector2( -4.23111, 6.26253 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones"]
shape = SubResource( 91 )

[connection signal="timeout" from="SpitCooldown" to="." method="_on_SpitCooldown_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="finished" from="AudioPlayer/Walk" to="." method="_on_Walk_finished"]
[connection signal="body_entered" from="Zones" to="Camera2D" method="_on_Zones_body_entered"]
[connection signal="body_exited" from="Zones" to="Camera2D" method="_on_Zones_body_exited"]

[editable path="RadialBar"]
